# ML-Sharif

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
docs/: gpg.md  poetry.md
session_01/: regression.ipynb
